ID:9079 Fix missing rabbitmq dependency

--- a/resources/logreport.service
+++ b/resources/logreport.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Modell Aachen log reporter
-After=network.target
+After=rabbitmq-server.service
+Requires=rabbitmq-server.service
 
 [Service]
 EnvironmentFile=/etc/default/logreport
